[package]
name = "mio-win-inv"
version = "0.2.0"
authors       = ["blabaere <benoit.labaere@gmail.com>"]
readme        = "README.md"
documentation = "https://github.com/blabaere/mio-win-inv"
homepage      = "https://github.com/blabaere/mio-win-inv"
repository    = "https://github.com/blabaere/mio-win-inv"
exclude       = [
  ".gitignore",
  ".travis.yml",
  "appveyor.yml",
  "test/**/*",
]

[dependencies]
log = "0.3.5"
env_logger = "0.3.2"
byteorder = "0.4.2"

# this one is for mio 0.6.1
#mio = "0.6.1"

# this one is for mio 0.6.0
mio = { git = "https://github.com/carllerche/mio", rev = "19d2d2a217199e23766e418dc6527ca509dcab34" }
