[package]
name = "mio-win-inv"
version = "0.2.0"
authors       = ["blabaere <benoit.labaere@gmail.com>"]
readme        = "README.md"
documentation = "https://github.com/blabaere/mio-win-inv"
homepage      = "https://github.com/blabaere/mio-win-inv"
repository    = "https://github.com/blabaere/mio-win-inv"
exclude       = [
  ".gitignore",
  ".travis.yml",
  "appveyor.yml",
  "test/**/*",
]

[dependencies]
log = "0.3.5"
env_logger = "0.3.2"
byteorder = "0.4.2"
mio = "0.6.2"

[target.'cfg(windows)'.dependencies]
miow = "0.1.5"
mio-named-pipes = "0.1.1"
winapi = "0.2.8"
